Upgraded CMakeLists.txt with new dqm4hep CMake macros

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,10 +6,7 @@
 
 # include directories
 include_directories( BEFORE include )
-
-# require proper c++
-add_definitions( "-pedantic -Wunused-value -O2" )
-add_definitions("-Wno-long-long -Wreturn-type -Werror")
+dqm4hep_set_cxx_flags()
 
 #AUX_SOURCE_DIRECTORY( src SRC_FILES )
 SET( SRC_FILES ${SRC_FILES} src/RemoteLogger.cc )
@@ -24,48 +21,28 @@ SET( SRC_FILES ${SRC_FILES} src/AppEventLoop.cc )
 SET( SRC_FILES ${SRC_FILES} src/Application.cc )
 SET( SRC_FILES ${SRC_FILES} src/EventCollector.cc )
 
+# ----- Http run control based on Mongoose library -----
 if( BUILD_HTTP_RC )
-  find_package( Mongoose REQUIRED )
-  
-  if( MONGOOSE_FOUND )
-  	message( STATUS "Check for Mongoose_INCLUDE_DIRS : ${Mongoose_INCLUDE_DIRS} -- ok" )
-  	message( STATUS "Check for Mongoose_LIBRARIES : ${Mongoose_LIBRARIES} -- ok" )
-
-    set(SRC_FILES ${SRC_FILES} src/plugins/HttpRunControlPlugin.cc)
-
-  	include_directories( ${Mongoose_INCLUDE_DIRS} )
-  	link_libraries( ${Mongoose_LIBRARIES} )
-
-  else()
-  	message( SEND_ERROR "Mongoose not found. Http won't be enabled !" )
-  endif()
-  
+  dqm4hep_find_package(
+    PACKAGE Mongoose
+    REQUIRED ADD_DEPENDS  
+  )
+  set( SRC_FILES ${SRC_FILES} src/plugins/HttpRunControlPlugin.cc )
 endif()
 
+# 
 add_shared_library( ${PROJECT_NAME} ${SRC_FILES} )
+install( TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib )
+install_directory( include DESTINATION . FILES_MATCHING PATTERN "*.h" PATTERN "*.cc" )
 
-install(
-  TARGETS ${PROJECT_NAME}
-  LIBRARY DESTINATION lib
-)
+# -------- Add executables --------
+dqm4hep_add_executable( main dqm4hep-start-rc-server bin )
+dqm4hep_add_executable( main dqm4hep-start-random-event-source bin )
+dqm4hep_add_executable( main dqm4hep-start-online-mgr bin )
+dqm4hep_add_executable( main dqm4hep-online-logger bin )
+dqm4hep_add_executable( main dqm4hep-start-event-collector bin )
 
-# add executable macro
-macro( BUILD_EXECUTABLE _dir _name _install_loc )
-	add_executable( ${_name} ${_dir}/${_name}.cc )
-	target_link_libraries( ${_name} ${PROJECT_NAME} )
-	install (
-	    TARGETS ${_name}
-	    RUNTIME DESTINATION ${_install_loc}
-	)
-endmacro()
-
-BUILD_EXECUTABLE( main dqm4hep-start-rc-server bin )
-BUILD_EXECUTABLE( main dqm4hep-start-random-event-source bin )
-BUILD_EXECUTABLE( main dqm4hep-start-online-mgr bin )
-BUILD_EXECUTABLE( main dqm4hep-online-logger bin )
-BUILD_EXECUTABLE( main dqm4hep-start-event-collector bin )
-
+# -------- clang tidy and format --------
 dqm4hep_run_clang_tidy()
 dqm4hep_run_clang_format()
 
-install_directory( include DESTINATION . FILES_MATCHING PATTERN "*.h" PATTERN "*.cc" )
